# riscv-power-trace-generation

./: Cargo.toml
src/: arithmetic_utils.rs  cpu_structs.rs  hdf5_helper.rs  main.rs  memory.rs  power_config.rs
src/cpu/: cpu_structs.rs  memory.rs  mod.rs  parsing.rs
