[package]
name = "power_trace_generation"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
rayon = "1.5"
crossbeam-channel = "0.5"
atomic_refcell = "0.1"
toml = "0.5"
serde = {version = "1.0", features = [ "derive" ]}

[dependencies.regex]
version = "1.5"
default-features = false
features = [ "std", "perf" ]

[dependencies.addr2line]
version = "0.17.0"
default-features = false
features = [ "cpp_demangle" ]