[package]
name = "power_trace_generation"
version = "0.1.0"
edition = "2021"

[features]
default = []
mem_track = []

[dependencies]
lazy_static = "1.4"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
toml = "0.5"
serde = {version = "1.0", features = [ "derive" ]}

[dependencies.regex]
version = "1.5"
default-features = false
features = [ "std", "perf" ]
