[package]
name = "power_trace_generation"
version = "0.1.0"
edition = "2021"

[features]
default = []
mem_track = []

[dependencies]
rand = "0.8"
rand_distr = "0.4.3"
static_assertions = "1.1"
lazy_static = "1.4"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
itertools = "0.10"

toml = "0.5"
serde = {version = "1.0", features = [ "derive" ]}
range_union_find = {version = "0.4", default-features = false}
hdf5 = "0.8"
serde_json = "1.0"

[dependencies.regex]
version = "1.5"
default-features = false
features = [ "std", "perf" ]

[dependencies.clap]
version = "3.1"
default-features = false
features = [ "std" ]
